--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -136,6 +136,19 @@ button:hover {
   display: none;
 }
 
+.participant-list {
+  margin-top: 10px;
+  padding: 0;
+  list-style: none;
+}
+
+.participant-item {
+  background-color: #e3f2fd;
+  padding: 5px;
+  margin-bottom: 5px;
+  border-radius: 3px;
+}
+
 footer {
   text-align: center;
   margin-top: 30px;
